--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Auto checkout bot for Popmart using Puppeteer",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "node index.js run-all",
+    "delay": "node index.js run-checkout-delayed"
   },
   "keywords": [
     "puppeteer",
