--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "pkg ."
   },
   "pkg": {
-    "targets": ["node16-linux-x64", "node16-macos-x64", "node16-win-x64"],
+    "targets": ["node16-win-x64"],
     "outputPath": "dist",
     "assets": ["steps/**/*", "utils.js"]
   },
